# the_filmroom

./: .gitignore  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  LIVEKIT_SETUP.md  LOOPS_EMAIL_SETUP.md  Makefile  README.md  RECORDING_MANAGEMENT.md  docker-compose.livekit.yml  docker-compose.yml  flightcontrol.json  hello.py  nixpacks.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
backend/: .env.example  Dockerfile  alembic.ini  nixpacks.toml  package.json  pyproject.toml  requirements.txt  startup.sh
backend/alembic/: env.py
backend/alembic/versions/: 7fd57d63c561_add_external_recording_support.py  923089c85bcd_add_recording_fields_to_session_model.py  98fe8f2cd753_add_session_management_tables.py  c4de5cf92f0d_add_invitation_and_coach_client_.py  f389418cae43_initial_database_schema.py  f46ea92fed49_add_cal_com_integration_fields.py
backend/src/: main.py
backend/src/api/: __init__.py  auth.py  calendar.py  coach_sessions.py  health.py  invitations.py  recordings.py  sessions.py  users.py  video.py  webhooks.py
backend/src/core/: config.py  logging.py
backend/src/models/: __init__.py  base.py  client.py  invitation.py  session.py  user.py
backend/src/services/: __init__.py  auth.py  calendar.py  email.py  livekit.py  recording.py  s3.py  session_storage.py  user.py
backend/src/the_filmroom_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_health.py
backend/the_filmroom_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
coach-dashboard/: package.json
docs/: LIVEKIT_SETUP.md
frontend/: nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml
processor/: .env.example  (+5 more)
(+37 files in other folders)
